<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.rizkydian.internalmeet.ui.userdetail.UserDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.userdetail.UserDetailActivity">

        <ProgressBar
            android:id="@+id/pb_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ScrollView
            android:id="@+id/sv_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/size_24dp">

                <com.github.florent37.shapeofview.shapes.RoundRectView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/size_8dp"
                    app:shape_roundRect_bottomLeftRadius="@dimen/size_16dp"
                    app:shape_roundRect_bottomRightRadius="@dimen/size_16dp"
                    app:shape_roundRect_topLeftRadius="@dimen/size_16dp"
                    app:shape_roundRect_topRightRadius="@dimen/size_16dp">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorOverlay5"
                        android:paddingHorizontal="@dimen/size_32dp"
                        android:paddingVertical="@dimen/size_16dp">

                        <TextView
                            android:id="@+id/tv_nip_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nip"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/tv_nip"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_nip"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/size_16dp"
                            android:text="@={viewModel.user.nip}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/tv_nip_label"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.github.florent37.shapeofview.shapes.RoundRectView>

                <com.github.florent37.shapeofview.shapes.RoundRectView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/size_8dp"
                    app:shape_roundRect_bottomLeftRadius="@dimen/size_16dp"
                    app:shape_roundRect_bottomRightRadius="@dimen/size_16dp"
                    app:shape_roundRect_topLeftRadius="@dimen/size_16dp"
                    app:shape_roundRect_topRightRadius="@dimen/size_16dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorOverlay5"
                        android:paddingHorizontal="@dimen/size_32dp"
                        android:paddingVertical="@dimen/size_16dp">

                        <TextView
                            android:id="@+id/tv_name_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/tv_name"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/size_16dp"
                            android:text="@={viewModel.user.name}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/tv_name_label"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.github.florent37.shapeofview.shapes.RoundRectView>

                <com.github.florent37.shapeofview.shapes.RoundRectView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/size_8dp"
                    app:shape_roundRect_bottomLeftRadius="@dimen/size_16dp"
                    app:shape_roundRect_bottomRightRadius="@dimen/size_16dp"
                    app:shape_roundRect_topLeftRadius="@dimen/size_16dp"
                    app:shape_roundRect_topRightRadius="@dimen/size_16dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorOverlay5"
                        android:paddingHorizontal="@dimen/size_32dp"
                        android:paddingVertical="@dimen/size_16dp">

                        <TextView
                            android:id="@+id/tv_email_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/tv_email"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_email"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/size_16dp"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text="@={viewModel.user.email}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/tv_email_label"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.github.florent37.shapeofview.shapes.RoundRectView>

                <com.github.florent37.shapeofview.shapes.RoundRectView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/size_8dp"
                    app:shape_roundRect_bottomLeftRadius="@dimen/size_16dp"
                    app:shape_roundRect_bottomRightRadius="@dimen/size_16dp"
                    app:shape_roundRect_topLeftRadius="@dimen/size_16dp"
                    app:shape_roundRect_topRightRadius="@dimen/size_16dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorOverlay5"
                        android:paddingHorizontal="@dimen/size_32dp"
                        android:paddingVertical="@dimen/size_16dp">

                        <TextView
                            android:id="@+id/tv_position_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/position"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/tv_position"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_position"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/size_16dp"
                            android:text="@={viewModel.user.position}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/tv_position_label"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.github.florent37.shapeofview.shapes.RoundRectView>

                <com.github.florent37.shapeofview.shapes.RoundRectView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/size_8dp"
                    app:shape_roundRect_bottomLeftRadius="@dimen/size_16dp"
                    app:shape_roundRect_bottomRightRadius="@dimen/size_16dp"
                    app:shape_roundRect_topLeftRadius="@dimen/size_16dp"
                    app:shape_roundRect_topRightRadius="@dimen/size_16dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorOverlay5"
                        android:paddingHorizontal="@dimen/size_32dp"
                        android:paddingVertical="@dimen/size_16dp">

                        <TextView
                            android:id="@+id/tv_role_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/role"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/tv_role"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_role"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/size_16dp"
                            android:ellipsize="end"
                            android:maxLines="4"
                            android:text="@={viewModel.user.role}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/tv_role_label"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.github.florent37.shapeofview.shapes.RoundRectView>

                <com.github.florent37.shapeofview.shapes.RoundRectView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/size_8dp"
                    app:shape_roundRect_bottomLeftRadius="@dimen/size_16dp"
                    app:shape_roundRect_bottomRightRadius="@dimen/size_16dp"
                    app:shape_roundRect_topLeftRadius="@dimen/size_16dp"
                    app:shape_roundRect_topRightRadius="@dimen/size_16dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorOverlay5"
                        android:paddingHorizontal="@dimen/size_32dp"
                        android:paddingVertical="@dimen/size_16dp">

                        <TextView
                            android:id="@+id/tv_gender_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gender"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/tv_gender"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_gender"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/size_16dp"
                            android:ellipsize="end"
                            android:maxLines="4"
                            android:text="@={viewModel.user.gender}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/tv_gender_label"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.github.florent37.shapeofview.shapes.RoundRectView>



            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>